# dicomweb-client

./: .flake8  .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements_docs.txt  requirements_test.txt  setup.cfg  setup.py
.github/workflows/: publish-client.yml  publish.yml  run_unit_tests.yml
data/: retrieve_instance_metadata.json  retrieve_instance_pixeldata.jls  retrieve_instance_pixeldata.jp2  retrieve_instance_pixeldata.rle  search_for_instances.json  store.xml
docs/: Makefile  conf.py  conformance.rst  development.rst  index.rst  installation.rst  introduction.rst  license.rst  make.bat  package.rst  usage.rst
docs/source/: conf.py  conformance.rst  development.rst  installation.rst  introduction.rst  package.rst
src/dicomweb_client/: __init__.py  api.py  cli.py  error.py  file.py  log.py  path.py  protocol.py  session_utils.py  uri.py  web.py
src/dicomweb_client/data/: file.dcm  search_for_series.json  search_studies.json  search_studies_limit-2_offset-1.json
src/dicomweb_client/ext/gcp/: __init__.py  session_utils.py  uri.py
src/dicomweb_client/tests/: conftest.py  test_api.py  test_cli.py
src/dicomweb_path/: __init__.py  path.py
src/pydicomweb_client/: __init__.py  api.py  cli.py  file.py  session_utils.py  web.py
src/pydicomweb_client/ext/: __init__.py
src/pydicomweb_client/ext/gcp/: __init__.py  uri.py
tests/: conftest.py  test_api.py  test_cli.py  test_ext_gcp_uri.py  test_file.py  test_path.py  test_session_utils.py  test_uri.py  test_web.py
